...

						Histrix.loadInnerXML('mensajes_reply_xml',
								'histrixLoader.php?xml=mensajes_reply.xml&destino='
										+ Nom + '&Email=' + email + '&para='
										+ login + '&telefono=' + telefono
										+ '&dir=histrix/mensajeria', '',
								'Enviar', 'DIVmensajes_recive.xml', 'Enviar', {
									width : '500px',
									height : '320px'
								});
					}
				});

...
